--- a/Project3IST210.ipynb
+++ b/Project3IST210.ipynb
@@ -456,6 +456,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Cv4oqBjEN3b5",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://raw.githubusercontent.com/dempseyt23/IST-210/master/Football%20ER%20diagram.png)"
+      ]
     }
   ]
 }
